# AI-Trolley-Problem

./: pyproject.toml
arduino/: README.md  (+3 more)
laptop/neural-network/: README.md  main.py  pyproject.toml
laptop/neural-network/data/: InputOutputEnums.py
laptop/neural-network/datasets/sprite/: labelled_sprites.csv
laptop/neural-network/models/: SpriteRecognitionModel.py  TrolleyProblemModel.py
laptop/neural-network/models/utils/: TrainingParams.py  TrainingUtils.py
laptop/neural-network/src/: main.py
laptop/neural-network/src/common/utils/: bsod.py
laptop/neural-network/src/common/websocket/: server.py
laptop/neural-network/src/data/: InputOutputEnums.py  Transforms.py
laptop/neural-network/src/data/sprite/: SpriteDataset.py
laptop/neural-network/src/models/: SpriteRecognitionModel.py
laptop/neural-network/src/models/utils/: TrainingParams.py  TrainingUtils.py
laptop/neural-network/src/services/neural_network/: NeuralNetworkService.py
laptop/neural-network/src/services/neural_network/api/: NeuralNetworkServer.py  neural_network_server.py
laptop/neural-network/src/services/neural_network/data/: InputOutputEnums.py
laptop/neural-network/src/services/neural_network/models/: SpriteRecognitionModel.py  TrolleyProblemModel.py
laptop/neural-network/src/services/serial/: SerialService.py  TrackDirection.py
laptop/neural-network/src/services/state/: StateMachine.py  States.py
laptop/neural-network/src/services/state/story/: AssetManager.py
laptop/neural-network/src/services/tts/: TTSService.py
laptop/neural-network/src/websocket/: server.py
(+24 files in other folders)
