[project]
name = "neural-network"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas==3.0.2",
    "pillow>=12.2.0",
    "pyrefly>=0.60.0",
    "pyserial>=3.5",
    "pyttsx3==2.91",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "torch==2.11.0",
    "torchmetrics>=1.9.0",
    "torchvision>=0.26.0",
    "websockets>=16.0",
]
